--- a/index.html
+++ b/index.html
@@ -9,6 +9,20 @@
     <script src="index.js" defer></script>
   </head>
   <body>
-    <h1>Hello, world!</h1>
+    <h1>The URL Chopper</h1>
+    <p>
+      Remove those pesky search params from a url to make it tidy and shareable.
+    </p>
+    <div>
+      <label for="url-input">Paste your URL here:</label>
+      <input id="url-input" type="text" />
+      <button>Click to copy the nice URL</button>
+    </div>
+    <div>
+      Made with &#9829; by
+      <a href="https://github.com/jenweber">Jen Weber</a> and
+      <a href="https://github.com/BradenLawrence">Braden Lawrence</a>. Source
+      code on <a href="">GitHub</a>
+    </div>
   </body>
 </html>
