--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div>
       <label for="url-input">Paste your URL here:</label>
       <input id="url-input" type="text" />
-      <button>Click to copy the nice URL</button>
+      <button id="copy-button">Click to copy the nice URL</button>
     </div>
     <div>
       Made with &#9829; by
