--- a/index.html
+++ b/index.html
@@ -14,15 +14,18 @@
       Remove those pesky search params from a url to make it tidy and shareable.
     </p>
     <div>
-      <label for="url-input">Paste your URL here:</label>
-      <input id="url-input" type="text" />
-      <button id="copy-button">Click to copy the nice URL</button>
+        <label for="url-input">Paste your URL here:</label>
+        <div class="wrapper">
+          <input id="url-input" type="text" placeholder="https://example.com?remove-this=true" />
+          <button id="copy-button">Click to copy the nice URL</button>
+        </div>
+      </div>
     </div>
-    <div>
+    <p class="byline">
       Made with &#9829; by
       <a href="https://github.com/jenweber">Jen Weber</a> and
       <a href="https://github.com/BradenLawrence">Braden Lawrence</a>. Source
-      code on <a href="">GitHub</a>
-    </div>
+      code on <a href="">GitHub</a>.
+    </p>
   </body>
 </html>
