Fill in more links

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>URL Chopper</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <meta name="description" content="" />
+    <meta name="description" content="Remove those pesky search params from a url to make it tidy and shareable.">
     <link rel="stylesheet" type="text/css" href="style.css" />
     <script src="index.js" defer></script>
   </head>
@@ -25,7 +25,7 @@
       Made with &#9829; by
       <a href="https://github.com/jenweber">Jen Weber</a> and
       <a href="https://github.com/BradenLawrence">Braden Lawrence</a>. Source
-      code on <a href="">GitHub</a>.
+      code on <a href="https://github.com/jenweber/url-chopper">GitHub</a>.
     </p>
   </body>
 </html>
