edit placeholder text
Made a nitpicky change to the placeholder text.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div>
         <label for="url-input">Paste your URL here:</label>
         <div class="wrapper">
-          <input id="url-input" type="text" placeholder="https://example.com?remove-this=true" />
+          <input id="url-input" type="text" placeholder="https://example.com/results?remove-this=true" />
           <button id="copy-button">Click to copy the nice URL</button>
         </div>
       </div>
